Add header, paragraph, and image to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <h4> Test 1 - 1er envois sur github</h4>
 <p>Ca marche ou pas</p>
 
+<h1> "Je viens d’éditer ce fichier sur GitHub !"</h1>
+  <p>Test 2 avec photo depuis guithub</p>
+  <img src="https://le-sabre-laser.fr/cdn/shop/articles/Star-Wars-Dark-Vador.jpg?v=1680259187&width=1500">
+
 </body> 
 </html>
 
