2eme tests et fin

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
   <p>Test 2 avec photo depuis guithub</p>
   <img src="https://le-sabre-laser.fr/cdn/shop/articles/Star-Wars-Dark-Vador.jpg?v=1680259187&width=1500">
 
+<h1> dernier exercice</h1>
+
+<p> L'import depuis github a bien fonctionné. Je vais renvoyé encore une fois vers github et c'est bon !!!</p>
+<p> Avec une nouvelle image histoire de ... </p>
+
+<img src="https://sabrelaser-france.fr/cdn/shop/articles/dark-vador-sabre-laser-735172.jpg?v=1745845366">
+
 </body> 
 </html>
 
